codepkg/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Cost_of_education__c</fullName>
        <label>EducationCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>department__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty</label>
        <referenceTo>faculty__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speciality</label>
        <referenceTo>speciality__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>Univercity__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Free</fullName>
        <active>true</active>
        <label>Free</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payed</fullName>
        <active>true</active>
        <label>Payed</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>